2005-03-10  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/initialize.c: SDRAM initialization was
	completely broken since 1.1.0.  It works again.

	* src/drivers/drv-cf.c: Moved Compact Flash code to live among
	generic drivers.  Implemented CF for the 79520's.  Wrote code for
	the 7a40x's, but it isn't working.  
	
	* src/drivers/drv-ext2.c (ext2_path_to_inode): Fixed dumb error in
	the symlink traversal code.

	* src/drivers/drv-nor-cfi.c: Improved TALK for troubleshooting
	flash.

2005-03-09  Marc Singer  <elf@buici.com>

	* src/drivers/drv-nor-cfi.c: Moved the cfi driver into the generic
	driver directory.  There is a machine specific header to handle
	the target controlled constants.

	* Makefile (ENV_CROSS_COMPILE): Fixed the selection of the cross
	compiler so that the environment will override the configured
	value.

2005-03-07  Marc Singer  <elf@buici.com>

	* src/drivers/drv-ext2.c: ext2 driver is working.  It supports
	paths and following symlinks.

	* scripts/envmagic: Grooming.  Properly fixed.

	* src/mach-ixp42x/serial.c (ixp42x_serial_write): Waiting for all
	data to write before returning.

	* src/mach-ixp42x/cmd-reset.c (cmd_reset): Resetting services
	before reset so that the nor flash has a chance to enter
	array-read mode.

	* src/mach-lh7952x/cmd-reset.c (cmd_reset): Resetting services
	before reset so that the nor flash has a chance to enter
	array-read mode.

	* src/mach-lh7952x/drv-nor-cfi.c (nor_release): Release function
	added so that cmd-reset will reliably perform.

	* src/drivers/drv-fat.c (fat_find): Fat filename comparisions are
	not case insensitive without requiring the descriptor parser to
	lower-case the path elements.

2005-03-06  Marc Singer  <elf@buici.com>

	* src/drivers/drv-ext2.c: A rudimentary ext2 driver is
	implemented.  It has not received much testing.

	* src/apex/command.c (call_command): Added strings to error
	reporting when not CONFIG_SMALL and a string has not yet been set.
