@@ -41,6 +41,8 @@ CONFIG_CMD_SETENV=y
 #CONFIG_CMD_COMPARE=y
 CONFIG_CMD_WAIT=y
 #CONFIG_CMD_XRECEIVE=y
+CONFIG_CMD_FILL=y
+CONFIG_CMD_GO=y
 
 CONFIG_ATAG=y
 CONFIG_ATAG_PHYS=0x20000100
